--- a/3-technical-documentation/styles.css
+++ b/3-technical-documentation/styles.css
@@ -1,15 +1,73 @@
 * {
-    /* border: 1px solid; */
-    box-sizing: border-box;
+  /* border: 1px solid; */
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: sans-serif;
+  background: radial-gradient(circle at center, white, gold);
+}
+
+li {
+  margin: 0 0 0.5rem 0;
 }
 
 pre {
-    white-space: pre-wrap;
-    margin: 0;
+  line-height: 1.5rem;
+  padding: 1rem 0;
+}
+
+#navbar {
+  padding-right: 2rem;
+  border-right: 1px solid;
+  text-transform: uppercase;
+  position: fixed;
+  left: 0%;
+  top: 0%;
+  width: 20vw;
+  height: 100vh;
+  z-index: 0;
+}
+
+#navbar-header {
+  font-size: larger;
+  font-weight: bold;
+}
+
+.nav-link {
+  margin-left: -2rem;
+  text-transform: capitalize;
+  list-style-type: none;
+  font-style: italic;
+}
+
+.nav-link a {
+  text-decoration: none;
+  color: black;
+}
+
+#main-doc {
+  margin-left: calc(1rem + calc(1rem + 20vw));
+  max-width: 75vw;
+}
+
+.main-section {
+  margin-bottom: 1rem;
+}
+
+.section-header {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+pre {
+  white-space: pre-wrap;
+  margin: 0;
 }
 
 .code-il {
-    display: inline;
+  display: inline;
 }
 
 #file,
@@ -18,17 +76,28 @@ pre {
 }
 
 #html {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
-#head, #title, #body, #h1 {
+#head,
+#title,
+#body,
+#h1 {
   margin-left: 2rem;
 }
 
+.event {
+  font-weight: bold;
+}
+
+a:hover {
+  color: red;
+}
 
 #copyrights {
-    font-family: sans-serif;
-    font-size: smaller;
-    text-align: center;
-    margin-bottom: 1rem;
-  }
+  font-family: sans-serif;
+  font-size: smaller;
+  text-align: center;
+  margin-left: 20vw;
+  margin-bottom: 1rem;
+}
