--- a/3-technical-documentation/styles.css
+++ b/3-technical-documentation/styles.css
@@ -3,6 +3,12 @@
   box-sizing: border-box;
 }
 
+@media only screen and (max-width: 767px) {
+  nav {
+    display: none;
+  }
+}
+
 body {
   margin: 0;
   font-family: sans-serif;
@@ -19,7 +25,7 @@ pre {
 }
 
 #navbar {
-  padding-right: 2rem;
+  padding: 2rem;
   border-right: 1px solid;
   text-transform: uppercase;
   position: fixed;
@@ -35,10 +41,13 @@ pre {
   font-weight: bold;
 }
 
+#navbar li {
+  list-style-type: none;
+}
+
 .nav-link {
   margin-left: -2rem;
   text-transform: capitalize;
-  list-style-type: none;
   font-style: italic;
 }
 
@@ -49,6 +58,7 @@ pre {
 
 #main-doc {
   margin-left: calc(1rem + calc(1rem + 20vw));
+  padding: 2rem;
   max-width: 75vw;
 }
 
