--- a/4-product-landing/styles.css
+++ b/4-product-landing/styles.css
@@ -96,3 +96,10 @@
     background-color: lightgray;
   }
   
+
+#copyrights {
+  font-family: sans-serif;
+  font-size: smaller;
+  text-align: center;
+  margin: 1rem;
+}
